samples/_failures_safe/1761472940_ce3bdd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_059114f3.c: In function ‘main’:
./samples/SAFE/__tmp_059114f3.c:161:12: error: missing terminating " character
  161 |     printf("
      |            ^
./samples/SAFE/__tmp_059114f3.c:161:5: error: expected expression at end of input
  161 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_059114f3.c:161:5: error: expected declaration or statement at end of input
